--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             <footer class="bg-secondary p-3">
                 <div class="container-fluid">
                     <div class="col-12 text-center">
-                            <h3 class="text-light text-uppercase fw-light">Knowledge Sharing Project</h3>
+                            <h3 class="text-light text-uppercase fw-light"> foundation Project - Knowledge Sharing Project</h3>
                             <h5 class="text-light fw-light fs-italic">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h5>
 
                             <div class="py-3">
